--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Healthcare Translator</title>
+    <title>Transcriptor-Translator</title>
     <style>
         body {
             font-family: sans-serif;
@@ -34,7 +34,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Healthcare Translator</h1>
+        <h1>LLM Transcription & Translation App</h1>
 
         <div class="language-selection">
             <label for="sourceLanguage">Source Language:</label>
